--- a/Project 2 Counter/style.css
+++ b/Project 2 Counter/style.css
@@ -31,7 +31,25 @@ body{
 .btn-group{
     display: flex;
     justify-content: space-around;
-    width: 40%;
+    width: 80%;
+}
+
+@media screen and ( min-width: 800px ) {
+    .btn-group{
+        
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .btn-group{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btn{
+        margin: 15px;
+    }
 }
 
 .btn{
