--- a/Project 3 Reviews/style.css
+++ b/Project 3 Reviews/style.css
@@ -6,7 +6,7 @@
 
 body{
     height: 100vh;
-    background-color: rgb(182, 190, 176);
+    background-color: #F1F7FD;
     color: #333;
     font-family: sans-serif;
 }
@@ -16,6 +16,106 @@ body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: 100vh;
 
+}
+
+.header{
+    margin-bottom: 50px;
+
+}
+
+.header .content-title{
+    font-size: 45px;
+    letter-spacing: 3px;
+    color: black;
+    margin: 20px 0;
+}
+
+.header .blue{
+    border: 1px solid rgb(87, 87, 184);
+    
+}
+
+.small{
+    width: 40%;
+    margin: 0 auto;
+}
+
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.main .card{
+    max-width: 500px;
+    padding: 20px 30px;
+    background-color: #fff;
+    box-shadow: 0 0 10px grey;
+    border-radius: 10px 15px 2px 10px;
+    text-align: center;
+    color: #666;
+}
+
+.main .card .person-photo{
+    width: 100px;
+
+}
+
+.main .card .person-name{
+    color: black;
+    font-size: 18px;
+    letter-spacing: 4px;
+    margin: 10px 0;
+}
+
+.person-job{
+    color: blue;
+}
+
+.grey{
+    border: 1px solid rgb(117, 62, 112);
+}
+
+.medium{
+    width: 15%;
+    margin: 10px auto;
+}
+
+.person-about{
+    letter-spacing: 1.5px;
+}
+
+.slider{
+    display: flex;
+    color: blue;
+    justify-content: space-around;
+    font-size: 25px;
+    cursor: pointer;
+    width: 50%;
+    margin: 10px auto;
+}
+
+.btn{
+    outline: none;
+    border: none;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    background-color: blue;
+    color: white;
+    font-size: 16px;
+    border-radius: 10px; 
+    cursor: pointer;
+    transition: all 0.3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+box-shadow: 0 0 10px grey;
+}
+
+.btn:hover{
+    background-color: black;
+    color: blue;
+    box-shadow: 0 0 10px blue;
 }
