--- a/Project 3 Reviews/style.css
+++ b/Project 3 Reviews/style.css
@@ -17,16 +17,15 @@ body{
     flex-direction: column;
     align-items: center;
     height: 100vh;
-
+    padding: 25px;
 }
 
 .header{
     margin-bottom: 50px;
-
 }
 
 .header .content-title{
-    font-size: 45px;
+    font-size: 35px;
     letter-spacing: 3px;
     color: black;
     margin: 20px 0;
@@ -60,8 +59,14 @@ body{
 }
 
 .main .card .person-photo{
-    width: 100px;
-
+    height: 120px;
+    background-image: url(depositphotos_208866120-stock-photo-serious-female-software-developer-creating.jpg);
+    background-position: center top;
+    background-size: cover;
+    width: 120px;
+    border-radius: 50%;
+    margin: 0 auto;
+    background-repeat: no-repeat;
 }
 
 .main .card .person-name{
@@ -111,7 +116,7 @@ body{
     transition: all 0.3s ease;
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
-box-shadow: 0 0 10px grey;
+    box-shadow: 0 0 10px rgb(63, 63, 63);
 }
 
 .btn:hover{
