--- a/Project 4 MenuBar/style.css
+++ b/Project 4 MenuBar/style.css
@@ -6,7 +6,7 @@
 
 body{
     min-height: 100vh;
-    background-color: #395FF4;
+    background-color: #4b5a96;
     color: #333;
     font-family: sans-serif;
 }
@@ -105,9 +105,10 @@ body{
 @media screen and ( max-width: 1050px ) {
     
     .nav-icon{
-        display: inline-block;
-        border: 1px solid blue;
-        
+        display: block;
+        cursor: pointer;
+        padding: 5px;
+        color: blue;
     }
     
     .socIcons{
@@ -120,14 +121,14 @@ body{
         background-color: #333;
     }
 
-    .menuItemMobile{
+    /* .menuItemMobile{
         display: flex;
         list-style-type: none;
         flex-direction: column;
+        
     }
     
     .menuItemMobile li {
-        margin-left: 20px;
         font-size: 22px;
         
     }
@@ -148,7 +149,12 @@ body{
         background-color: rgb(174, 144, 194);
         color: white;
         box-shadow: 0 0 9px hotpink;
-        transform: scale(1.05);
+        text-transform: capitalize;
     }
+    
+    .menuItemMobile li:hover{
+    
+    } */
+
 
 }
